[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/chr/enemy/chicken nega/chicken nega_spritesheet400.png" type="Texture" id=1]
[ext_resource path="res://code_game/Chicken_nega.gd" type="Script" id=2]
[ext_resource path="res://scene/chicproject.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1408, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1664, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "atk_charge",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "atk_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=36]
radius = 9.0
height = 18.0

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 10, 23 )

[node name="Chck" type="KinematicBody2D"]
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.87499, -4.40626 )
scale = Vector2( 0.298828, 0.321777 )
frames = SubResource( 3 )
animation = "atk_charge"
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -2 )
shape = SubResource( 4 )

[node name="directiontimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 3, -2 )
shape = SubResource( 36 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Detectionzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectionzone"]
position = Vector2( 129, -1 )
shape = SubResource( 37 )

[node name="GunPoint" type="Position2D" parent="."]
position = Vector2( 30, 5 )

[connection signal="timeout" from="directiontimer" to="." method="_on_directiontimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoottimer_timeout"]
[connection signal="body_entered" from="Detectionzone" to="." method="_on_Detectionzone_body_entered"]
[connection signal="body_exited" from="Detectionzone" to="." method="_on_Detectionzone_body_exited"]
